<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorAbastecimento">

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="171dp"
        android:text="@string/novo_abastecimento"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvnovoposto"
        android:layout_width="61dp"
        android:layout_height="25dp"
        android:layout_marginTop="64dp"
        android:text="@string/postoForm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPosto"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnovoposto" />

    <TextView
        android:id="@+id/tvNovoValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="268dp"
        android:text="@string/valorForm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPosto" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNovoValor" />

    <Button
        android:id="@+id/button"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginBottom="140dp"
        android:text="@string/ADICIONAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>